tests/assignement/undefined.rev
foo = 3 // error:  undeclared variable 'foo'